# ada

./: .gitignore  .prettierrc  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  vite.config.ts
scripts/: build-sidecars.sh  build-signed.sh  dev-setup.sh
src/: index.css  main.tsx  routeTree.gen.ts  router.ts  router.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  error.rs  lib.rs  state.rs  util.rs
src-tauri/src/cli/: daemon.rs  install.rs  mod.rs  paths.rs
src-tauri/src/clients/: commands.rs  types.rs
src-tauri/src/daemon/: client.rs  env.rs  logging.rs  mod.rs  notification.rs  persistence.rs  pid.rs  protocol.rs  server.rs  session.rs  shell.rs  shell_wrapper.rs  tauri_commands.rs  tray.rs  wrappers.rs
src-tauri/src/git/: commands.rs  mod.rs  worktree.rs
src-tauri/src/project/: commands.rs  mod.rs  types.rs
src-tauri/src/runtime/: commands.rs
src-tauri/src/terminal/: commands.rs  mod.rs  pty.rs  types.rs
src/components/: attention-badge.tsx  cli-install-card.tsx  confirmation-dialog.tsx  project-settings.tsx  project-sidebar.tsx  terminal-strip.tsx  terminal-view.tsx
src/components/ui/: alert-dialog.tsx  button-variants.ts  button.tsx
src/lib/: api.ts  query-client.ts  router-instance.ts  tauri-events.ts  terminal-history.ts  terminal-utils.ts  types.ts
src/lib/queries/: cli.ts  clients.ts  daemon.ts  git.ts  index.ts  projects.ts  runtime.ts  terminals.ts
src/routes/: __root.tsx  index.tsx  project.$projectId.$terminalId.tsx  project.$projectId.index.tsx  project.$projectId.tsx
src/stores/: client-store.ts  project-store.ts  terminal-store.ts  terminal-ui-store.ts  unseen-store.ts
