[package]
name = "ada"
version = "0.0.1-alpha"
description = "AI Code Agent Manager"
authors = ["Ada Team"]
edition = "2021"

[lib]
name = "ada_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ada"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
portable-pty = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
which = "6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
