[package]
name = "ada"
version = "0.0.1-alpha"
description = "AI Code Agent Manager"
authors = ["Ada Team"]
edition = "2021"
default-run = "ada"

[lib]
name = "ada_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ada"
path = "src/main.rs"

[[bin]]
name = "ada-cli"
path = "src/bin/ada-cli.rs"

[[bin]]
name = "ada-daemon"
path = "src/bin/ada-daemon.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
portable-pty = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
which = "6"
axum = "0.7"
whoami = "1.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml_edit = "0.22"

# System tray for daemon (standalone, not Tauri-dependent)
tray-icon = "0.19"
muda = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
tao = "0.32"  # Cross-platform event loop for system tray
once_cell = "1.19"  # Thread-safe lazy static initialization

# CLI
clap = { version = "4", features = ["derive"] }

# Signal handling (Unix)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
